req finished, mvp getting close

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,3 +1,15 @@
-<p>
-  Hi! I'm the main content replacement, and this means htmlprocessor is working fine. Congrats!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+</head>
+<body>
+  <!-- le jankiest div ever, dont do this, will change later in the course :) -->
+  <div>
+    <button id="displayTodosButton">Display Todos</button>
+    <button id="displayToggleAllButton">Toggle All</button>
+  </div>
+</body>
+</html>
