yo that div needs a class

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <!-- le jankiest div ever, dont do this, will change later in the course :) -->
-  <div>
+  <div class="wrapper">
     <button id="displayTodosButton">Display Todos</button>
     <button id="displayToggleAllButton">Toggle All</button>
   </div>
