--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -8,8 +8,31 @@
 <body>
   <!-- le jankiest div ever, dont do this, will change later in the course :) -->
   <div class="wrapper">
-    <button id="displayTodosButton">Display Todos</button>
-    <button id="displayToggleAllButton">Toggle All</button>
+    <div>
+      <button onclick="handlers.displayTodos()">Display Todos</button>
+      <button onclick="handlers.toggleAll()">Toggle All</button>
+    </div>
+
+    <div>
+      <button onclick="handlers.addTodo()">Add Todo</button>
+      <input id="addTodoTextInput" type="text">
+    </div>
+
+    <div>
+      <button onclick="handlers.changeTodo()">Change Todo</button>
+      <input id="changeTodoPositionInput" type="number">
+      <input id="changeTodoTextInput" type="text">
+    </div>
+
+    <div>
+      <button onclick="handlers.deleteTodo()">Delete</button>
+      <input id="deleteTodoPositionInput" type="number">
+    </div>
+  
+    <div>
+      <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+      <input id="toggleCompletedTodoPosition" type="number">
+    </div>
   </div>
 </body>
 </html>
