--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -15,7 +15,7 @@
     <div>
       <form action="">
       <button onclick="handlers.addTodo()">Add Todo</button>
-      <input id="addTodoTextInput" type="text" required>
+      <input id="addTodoTextInput" type="text">
     </form>
     </div>
 
